# flowtrim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  QUICKSTART.md  README.md  SECURITY.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/fixtures/exact/: failing-stack-trace.txt  source-quote.txt
benchmarks/fixtures/logs/: noisy-build-fail.txt  noisy-build-pass.txt
benchmarks/fixtures/vault/: aql-index-inventory.md  aql-packet-routing.md
benchmarks/public-corpus/: manifest.v1.json
benchmarks/results/: 2026-06-19-public-alpha.md  2026-07-09-public-alpha.md
docs/: benchmark-results.md  install-verification.md  install.md
docs/superpowers/plans/: 2026-06-18-flowtrim-heavy-benchmark-lab-implementation.md  2026-06-18-flowtrim-native-command-output-implementation.md
docs/superpowers/specs/: 2026-06-18-flowtrim-final-native-core-design.md  2026-06-18-flowtrim-heavy-benchmark-lab-design.md
examples/fixture-logs/: build-log-reduced.txt  build-log.txt
examples/node-project/: README.md
examples/python-project/: README.md
scripts/: flowtrim-skill-install.mjs  install-skill.ps1  install-skill.sh
skills/flowtrim/: SKILL.md
skills/flowtrim/agents/: openai.yaml
skills/flowtrim/references/: benchmark-gates.md  commands.md  lane-policy.md  safety-rules.md
skills/flowtrim/scripts/: flowtrim_benchmark.py  flowtrim_orchestrator.py  flowtrim_run.py  flowtrim_trim.py
src/flowtrim/: __init__.py  adapters.py  benchmark.py  benchmark_summary.py  classifier.py  compare.py  docs_check.py  doctor.py  install_check.py  metrics.py  models.py  native_command.py  preservation.py  privacy.py  public_corpus.py  publication.py  release_checks.py  report_io.py  reporter.py  runner.py  scorecard.py  selector.py  skill_check.py  trim.py
src/flowtrim/cli/: __init__.py  benchmark.py  orchestrator.py  run.py  trim.py
src/flowtrim/fixtures/code/: duplicate-conversion-logic.txt  over-abstract-helper.txt
src/flowtrim/fixtures/context/: handoff.md  tool-trace.json
src/flowtrim/fixtures/exact/: line-level-diff.txt
src/flowtrim/fixtures/vault/: aql-approval-boundary.md  aql-rtk-candidate.txt  aql-source-id-preservation.md
tests/: test_adapters.py  test_benchmark.py  test_ci.py  test_classifier_selector.py  test_cli.py  test_compare.py  test_install_check.py  test_metrics.py  test_native_command.py  test_packaging.py  test_preservation.py  test_privacy.py  test_proof_matrix.py  test_public_corpus.py  test_public_readiness.py  test_publication.py  test_report_io.py  test_reporter.py  test_run_cli.py  test_runner.py  test_scorecard.py  test_suite.py  test_trim.py  test_work_commit_history.py
tests/fixtures/logs/: cargo-fail.txt  go-fail.txt  jest-fail.txt  npm-err.txt  pytest-real-fail.txt  tsc-fail.txt
