[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtrim"
version = "0.1.0"
description = "Lane-based token orchestration for AI agent work repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Atichart" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
