[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtrim"
version = "0.1.0"
description = "Lane-based token orchestration for AI agent work repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Atichart" }
]
dependencies = []
keywords = [
  "ai-agents",
  "codex",
  "context-engineering",
  "token-optimization",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/atichart/flowtrim"
Repository = "https://github.com/atichart/flowtrim"
"Issue Tracker" = "https://github.com/atichart/flowtrim/issues"

[project.scripts]
flowtrim-benchmark = "flowtrim.cli.benchmark:main"
flowtrim-classify = "flowtrim.cli.orchestrator:main"

[tool.setuptools.packages.find]
where = ["src"]
