[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtrim"
version = "0.1.0"
description = "Lane-based token orchestration for AI agent work repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Atichart" }
]
dependencies = []
keywords = [
  "ai-agents",
  "codex",
  "context-engineering",
  "token-optimization",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]

[project.urls]
Homepage = "https://github.com/ozifer33/flowtrim"
Repository = "https://github.com/ozifer33/flowtrim"
"Issue Tracker" = "https://github.com/ozifer33/flowtrim/issues"

[project.scripts]
flowtrim-benchmark = "flowtrim.cli.benchmark:main"
flowtrim-classify = "flowtrim.cli.orchestrator:main"
flowtrim-run = "flowtrim.cli.run:main"
flowtrim-trim = "flowtrim.cli.trim:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flowtrim = [
  "fixtures/**/*.json",
  "fixtures/**/*.md",
  "fixtures/**/*.txt",
  "public-corpus/*.json",
]
